--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Convert React/JSX + Tailwind UI code to Rails ViewComponent classes and ERB templates",
   "main": "cli/index.js",
   "bin": {
-    "v0-rails": "./cli/index.js"
+    "v0-rails": "./bin/v0-rails"
   },
   "engines": {
     "node": ">=20"
@@ -23,7 +23,7 @@
     "vercel",
     "v0"
   ],
-  "author": "",
+  "author": "Shreyas Prakash",
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.12.13",
@@ -43,5 +43,18 @@
     "eslint": "^8.57.0",
     "eslint-plugin-security": "^2.1.1",
     "jest": "^29.7.0"
-  }
-} 
+  },
+  "directories": {
+    "example": "examples",
+    "lib": "lib",
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shreyas-makes/v0_rails.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shreyas-makes/v0_rails/issues"
+  },
+  "homepage": "https://github.com/shreyas-makes/v0_rails#readme"
+}
