--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v0-rails",
-  "version": "1.0.0",
-  "description": "Convert React/JSX + Tailwind UI code to Rails ViewComponent classes and ERB templates",
+  "version": "1.1.0",
+  "description": "Convert React/JSX + Tailwind UI code from v0.dev to Rails ViewComponent classes and ERB templates with automatic slot detection, icon handling, and route generation",
   "main": "cli/index.js",
   "bin": {
     "v0-rails": "./bin/v0-rails"
@@ -21,7 +21,8 @@
     "react",
     "tailwind",
     "vercel",
-    "v0"
+    "v0",
+    "shadcn"
   ],
   "author": "Shreyas Prakash",
   "license": "MIT",
